@@ -70,6 +70,7 @@ public final class TablePropertiesAnalyzer {
             .put(stripIndexPrefix(TableParameterInfo.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT), TableParameterInfo.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT)
             .put(stripIndexPrefix(TableParameterInfo.NUMBER_OF_SHARDS), TableParameterInfo.NUMBER_OF_SHARDS)
             .put(stripIndexPrefix(TableParameterInfo.SETTING_WAIT_FOR_ACTIVE_SHARDS), TableParameterInfo.SETTING_WAIT_FOR_ACTIVE_SHARDS)
+            .put(stripIndexPrefix(TableParameterInfo.ALLOCATION_MAX_RETRIES), TableParameterInfo.ALLOCATION_MAX_RETRIES)
             .put("blobs_path", TableParameterInfo.BLOBS_PATH)
             .build();
 
@@ -104,6 +105,7 @@ public final class TablePropertiesAnalyzer {
             .put(TableParameterInfo.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT, new SettingsAppliers.TimeSettingsApplier(CrateTableSettings.UNASSIGNED_NODE_LEFT_DELAYED_TIMEOUT))
             .put(TableParameterInfo.NUMBER_OF_SHARDS, new NumberOfShardsSettingsApplier())
             .put(TableParameterInfo.SETTING_WAIT_FOR_ACTIVE_SHARDS, new SettingsAppliers.StringSettingsApplier(CrateTableSettings.SETTING_WAIT_FOR_ACTIVE_SHARDS))
+            .put(TableParameterInfo.ALLOCATION_MAX_RETRIES, new SettingsAppliers.IntSettingsApplier(CrateTableSettings.ALLOCATION_MAX_RETRIES))
             .put(TableParameterInfo.BLOBS_PATH, new BlobPathSettingApplier())
             .build();
 
